December 2012
  - account profiles and PDF structures are now bound to server profile
  - IMAP: support "/" as path separator (RFE 3575692)


25.09.2012 3.9
  - Kolab 2.4 support
  - Puppet support
  - LAM Pro
   -> support RFC2307bis automount entries
   -> read-only fields in self service
  - fixed bugs
   -> Hidden tools are still shown on the "Tools" page (3546092)


19.07.2012 3.8
  - quick (un)lock for users
  - allow to disable tools
  - LAM Pro:
   -> Custom fields module allows to manage custom LDAP attributes in Self Service
   -> Self service now supports user self registration
   -> Separate group of names module for users allows to manage memberships if Unix module is not used (RFE 3504429)
   -> Named object module for groups (used for rfc2307bis schema)
   -> Password change page allows account (un)locking
   -> Allow to send password mails on user edit page
   -> Custom scripts: supports manual scripts that can be run from account edit pages
   -> Zarafa 7.1 support (proxy URL for servers)
  - fixed bugs
   -> Asterisk extensions with same name (3528288)


25.03.2012 3.7
  - Login: support bind user for login search
  - Personal: added labeledURI and cosmetic changes, description is now multi-valued (RFE 3446363)
  - Asterisk extensions: group extension entries by name and context
  - File upload:
   -> support custom scripts postCreate (LAM Pro)
   -> PDF export
  - New translation: Slovakian
  - removed phpGroupWare support (project no longer exists)
  - Use new password after self password change (RFE 3446350)
  - LAM Pro:
   -> Password self reset can send password confirmation and notification mails
   -> Zarafa archiver support
   -> Heimdal Kerberos support
  - Fixed bugs:
   -> DHCP: error message not displayed properly (3441975)
   -> Profile loading not possible if required fields are not filled (3444948)
   -> Tree view: unable to add object class (3446037)
   -> Edit page: unable to move accounts to different OU